--- a/_posts/2023-05-29-INMEDIA-7.1佔立會案-孫曉嵐認罪-由始至終都沒有為爭取自由-公義-民主而後悔.html
+++ b/_posts/2023-05-29-INMEDIA-7.1佔立會案-孫曉嵐認罪-由始至終都沒有為爭取自由-公義-民主而後悔.html
@@ -8,15 +8,15 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202305291.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>2019年7月1日，示威者衝入立法會大樓，多人被控進入或逗留在會議廳範圍罪及暴動罪，包括藝人王宗堯及前港大學生會會長孫曉嵐。案件今日開審，預料審期逾40日。孫曉嵐在開審前認罪，她在Facebook 發帖稱自己軟弱、無能，不能承受一個可預期的長刑期，但指「由始至終都沒有為爭取自由、公義、民主而後悔。2023年，我在香港，身在牢獄，但我的思想仍然自由。」</p>
-<p>開庭前，約20名友人「送別」孫曉嵐，她在Facebook 發帖稱將會認罪。她向記者合十致意，王宗堯則與女友十指緊扣到場。</p>
+<img src="https://www.inmediahk.net/files/column_images/202305291.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>2019年7月1日，示威者衝入立法會大樓，多人被控進入或逗留在會議廳範圍罪及暴動罪，包括藝人王宗堯及前港大學生會會長孫曉嵐。案件今日開審，預料審期逾40日。孫曉嵐在開審前認罪，她在 Facebook 發帖稱自己軟弱、無能，不能承受一個可預期的長刑期，但指：「由始至終都沒有為爭取自由、公義、民主而後悔。2023年，我在香港，身在牢獄，但我的思想仍然自由。」</p>
+<p>開庭前，約20名友人「送別」孫曉嵐，她在 Facebook 發帖稱將會認罪。她向記者合十致意，王宗堯則與女友十指緊扣到場。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/q0jwY9z6E0" title="Untitled"><img src="https://live.staticflickr.com/65535/52933693035_f8e1f6922a_c.jpg" width="800" alt="Untitled" /></a></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0AA832E724" title="Untitled"><img src="https://live.staticflickr.com/65535/52933691495_06e5aaebe8_c.jpg" width="800" alt="Untitled" /></a><br /><em>王宗堯</em></p>
 <p>孫曉嵐在帖文中指，認罪決定雖然個人，但案件本質是政治亦公共，故作簡單交代。她表示作為反送中運動較早期已被落案檢控的人，起初還是戰意高昂，惟幾年來政治變更；公民社會萎縮；執法、立法、司法機關墮落速度「始料不及」，加上個人承受能力退步，令她在面對審訊時可作的抗爭有所動搖。</p>
 <p>她表示這段日子了解到，自由的狀態可以是相當個人的選擇，自己的真誠特質才是最大的本領。孫曉嵐指自己軟弱、無能，不能承受一個可預期的長刑期，對於未能在法庭平台，敘述出七一立法會案的本質和抗爭者的不同面貌，並要「懦弱地接受威權一方的妄言誹謗」，感到抱歉和難過。</p>
-<p>孫曉嵐表示她的付出，是基於對這個地方的愛、所愛的人及深信的價值，但她稱沒有信心長時間的分離不會消磨這份愛和意志。她表示，自己只能盡其努力堅守其個原則——不為官司微薄的勝算，說出有違立場、與事實不符的話。她稱思考的過程中，腦中不斷響起——「永遠站在反抗者的一方」，認為這不應淪為口號。她稱「我要怎麼站，怎樣再為所愛的人事地貢獻，是我還要且會繼續努力摸索的功課。」</p>
+<p>孫曉嵐表示她的付出，是基於對這個地方的愛、所愛的人及深信的價值，但她稱沒有信心長時間的分離不會消磨這份愛和意志。她表示，自己只能盡其努力堅守其個原則——不為官司微薄的勝算，說出有違立場、與事實不符的話。她稱思考的過程中，腦中不斷響起——「永遠站在反抗者的一方」，認為這不應淪為口號。她稱：「我要怎麼站，怎樣再為所愛的人事地貢獻，是我還要且會繼續努力摸索的功課。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/y75rpFaE9m" title="Untitled"><img src="https://live.staticflickr.com/65535/52933456129_c4cbd1dc4b_c.jpg" width="800" alt="Untitled" /></a></p>
-<p>她最後感謝身邊的人，會帶著這些愛，記掛著還在不同崗位努力守護這個地方的人，好好渡過獄中的日子。孫曉嵐重申「由始至終都沒有為爭取自由、公義、民主而後悔。2023年，我在香港，身在牢獄，但我的思想仍然自由。」</p>
+<p>她最後感謝身邊的人，會帶著這些愛，記掛著還在不同崗位努力守護這個地方的人，好好渡過獄中的日子。孫曉嵐重申：「由始至終都沒有為爭取自由、公義、民主而後悔。2023年，我在香港，身在牢獄，但我的思想仍然自由。」</p>
 <p>13名被告為：城大編委記者黃家豪（被起訴時21歲）、廚師羅樂生（20歲）、運輸工人何俊諺（22歲）、「佔旺女村長」畢慧芬（24歲）、港大學生會前會長孫曉嵐（24歲）、「佔旺畫家」潘浩超（32歲）、《熱血時報》記者馬啟聰（30歲）、藝人王宗堯（41歲）、地盤工人沈鏡樂（24歲）、劉頴匡（26歲）、吳志勇（25歲）、文員范俊文（21歲）及林錦均（25歲）。</p>
 <p>另一被告鄒家成因另涉初選案「撞期」，早前獲批准分拆成另案，定於10月16日開審，料需時15天。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/89b4P4Q161" title="IMG_8286"><img src="https://live.staticflickr.com/65535/48172375226_07af01c5ec_c.jpg" width="800" alt="IMG_8286" /></a><br /><em>2019年7月1日，立法會外</em></p>
@@ -33,4 +33,4 @@ author: 獨媒報導
 2023年5月29日<br />
 寫於開審前</p></blockquote>
 <p>相關報導：<br /><a href="https://bit.ly/43cUsGI">7.1佔立會案2023年5月開審 王宗堯穿Adidas應訊：未審先判對還柙「手足」不公</a><br /><a href="https://bit.ly/3NbpkCd">鄒家成涉7.1佔立會案 原定明年5月開審 惟與47人案撞期 故分案並押後至10月</a></p>
-</div></div></div>
+</div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
