--- a/_posts/2023-05-29-INMEDIA-建制遞交161萬簽名撐-完善-區議會-李慧琼-反映社會廣泛認同.html
+++ b/_posts/2023-05-29-INMEDIA-建制遞交161萬簽名撐-完善-區議會-李慧琼-反映社會廣泛認同.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202305293.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府早前推出「完善」區議會方案，由多個團體及政黨組成的「香港各界撐完善地區治理大聯盟」，自月起起動員收集市民簽名，逾三個星期共收集了1,616,385個簽名。總召集人李慧琼認為，清楚顯示政府提出的方案符合市民期望，並反映社會廣泛認同：「係一個好方案，應該盡快落實！」</p>
+<img src="https://www.inmediahk.net/files/column_images/202305293.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府早前推出「完善」區議會方案，由多個團體及政黨組成的「香港各界撐完善地區治理大聯盟」，自月初起動員收集市民簽名，逾三個星期共收集了1,616,385個簽名。總召集人李慧琼認為，清楚顯示政府提出的方案符合市民期望，並反映社會廣泛認同：「係一個好方案，應該盡快落實！」</p>
 <p>政府自推出改革區議會方案後，一眾官員從多個渠道宣傳。政制及內地事務局局長曾國衞、民政及青年事務局局長麥美娟早前便落區向市民推銷方案，當局的社交平台昨日貼出相關影片。而在1,616,385個簽名中，1,103,726個是實體簽名，512,659個則為網上簽名。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1d32J6Fko4" title="無標題"><img src="https://live.staticflickr.com/65535/52934495625_b6d6eee588_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>向陳國基遞交簽名 李慧琼：有信心休會前完成審議</strong></p>
