--- a/_posts/2023-05-28-PQ-邱國禎-世紀大劫難-台灣史上少見的經濟迫害-中.html
+++ b/_posts/2023-05-28-PQ-邱國禎-世紀大劫難-台灣史上少見的經濟迫害-中.html
@@ -32,7 +32,7 @@ author: 邱 國禎
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f.jpeg" alt="" class="wp-image-137982" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f.jpeg 476w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f-150x150.jpeg 150w" sizes="(max-width: 476px) 100vw, 476px" /><figcaption>後勤總部東南區補給司令部，特派了兩個糧秣補給庫及一個軍械補給庫，專門負責將國府急需的糧秣及軍備運補去中國。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f.jpeg" alt="" class="wp-image-137982" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f.jpeg 476w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/78520dab-04af395f-0945-42bd-a0d0-d5da3869293f-150x150.jpeg 150w" sizes="(max-width: 476px) 100vw, 476px" /><figcaption>後勤總部東南區補給司令部，特派了兩個糧秣補給庫及一個軍械補給庫，專門負責將國府急需的糧秣及軍備運補去中國。</figcaption></figure></div>
 
 
 
