Update VOCUS 2023-05-30 patch

--- a/_posts/2023-05-27-VOCUS-短租淺力股-房東怎麼出租屋才賺.html
+++ b/_posts/2023-05-27-VOCUS-短租淺力股-房東怎麼出租屋才賺.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但也有人對於這節目有不少的評價，有些觀眾覺得一些設計和行銷其實沒有必要，甚至是為了節目效果的過度翻新。有部分業者也覺得《短租淺力股》裡講述太過美好的一面，而忽略了競爭力和無法回收成本的狀況，只計算能賺多少但缺法會虧多少的估計，是很危險的，故不認同裡面太過樂觀的租屋改造。</div>
 <div class="draft-block draft--p left">有些人則比較在乎，這些已經有幾棟房的屋主幾乎都是有能人士，不用依靠節目的意見也會找到適合的管理團隊，認為這檔節目只是一種互利的宣傳手法。</div>
 <div class="draft-block draft--p left">以我自己的觀感來說，《短租淺力股》有一些基礎的房屋行銷內容，其實可以給一些夢想出租房間或想改裝成租屋的人一些意見，當然因為娛樂性只能當作建言，不可全信。畢竟每個房間的地理位置，當地人文風情都不同，只能說整體節目呈現出「當個房東也不容易」。雖然這樣說但作為一個租客來講，比起房東不容易，我可能更同情租到爛套房的房客吧？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/Ej9qnDW3kE4"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/Ej9qnDW3kE4"></iframe></div>
