--- a/_posts/2023-05-25-VOCUS-美代子阿佐谷心情-茫眼男子的群像.html
+++ b/_posts/2023-05-25-VOCUS-美代子阿佐谷心情-茫眼男子的群像.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">安部慎一的漫畫同時有著劇畫格，但也在某些時表現拙巧派風格的特色，可以說同時納入劇畫和拙巧的混合技巧，故可以看出為何會有讀者著迷。有意思的在訪談時曾經透露在安部慎一連載最初的漫畫《溫和的人》時，就使用大量照片參考。</div>
 <div class="draft-block draft--p left">除了風景之外也請友人在指地的地點做出動作、拍照、然後進行繪製來彌補畫技不足的問題。另一本短篇集《孤獨未滿》則是都先拍成照片、規劃分鏡、繪製漫畫、並且做出拼湊的普普風格，可以說跳脫了以往主流漫畫的常識。</div>
 <div class="draft-block draft--p left">漫畫《美代子阿佐谷心情》是一部滿讓人窒息的漫畫作品，除了整體的調性和風格外，裡面一些對女性描繪可以看到時代男性霸權的痕跡，但在該時代與日本背景又意外的合理，並且配合上安部慎一的乖僻的性格，還有莫名其妙的各種堅持與片段，讓《美代子阿佐谷心情》這本漫畫每個篇章的故事都無法預想，這也許也符合有時候現實人生，比電影小說更佳奇妙。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/TAZlkIMuZ1c"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/TAZlkIMuZ1c"></iframe></div>
