--- a/_posts/2023-05-30-INMEDIA-行會通過巴士加價3.9至7-林世雄-加幅溫和-合適.html
+++ b/_posts/2023-05-30-INMEDIA-行會通過巴士加價3.9至7-林世雄-加幅溫和-合適.html
@@ -23,4 +23,5 @@ author: 獨媒報導
 <p>民建聯立法會交通及運輸委員會主席陳恒鑌稱，今次獲批的加幅，較巴士公司申請相對溫和，並貼近當局的通脹預算，認同加幅溫和，相信市民較容易接受。</p>
 <p>民主黨則表示，儘管本港已逐漸復常，但在市民未獲得經濟成果的前提下，今次加價仍增加了市民的經濟壓力。</p>
 <p>九巴表示，目前售價780元的月票，將於9月18日加價至800元，加幅為2.6%。九巴稱，月票售價調整日期比新票價生效的6月18日遲三個月，以回饋乘客一直支持。</p>
+<p>交通諮詢委員會主席張仁良歡迎政府把關，把加幅控制在較溫和的水平，又認同多管齊下協助專營巴士公司開源節流，進一步開拓非票務收入。</p>
 </div></div></div>
