--- a/_posts/2023-05-30-INMEDIA-運輸署長訪荃灣區議會-稱會前落區視察-大開眼界.html
+++ b/_posts/2023-05-30-INMEDIA-運輸署長訪荃灣區議會-稱會前落區視察-大開眼界.html
@@ -20,5 +20,5 @@ author: 獨媒報導
 <p>由去年開始，部分紅色公共小巴獲准納入2元乘車優惠計劃，有議員提出，自己選區的小巴沒有該優惠。羅淑佩回應指，紅色公共小巴「兩蚊雞要小心處理」，因為並非受運輸署直接監管班次、路線、收費。她稱紅色小巴打算參與2元計劃前，需將營運狀況等資料交予運輸署審視，以防濫用，認為「甚至佢自己唔嚟申請，未必想受我規管」，又指運輸署一直推動紅色公共小巴轉為綠色專綫小巴。</p>
 <p>此外，亦有議員建議興建行人天橋連接「環宇海灣」與港鐵荃灣西站一帶，羅淑佩回應指並非全部街坊有一致意見，反指部分街坊覺得妨礙景觀，稱荃灣路進行的擴闊工程完成後，已經有屏障，市民不用擔遮。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/o17796yMvN" title="DSC_1045"><img src="https://live.staticflickr.com/65535/52937089569_464795cbb1_b.jpg" width="1024" alt="DSC_1045" /></a><br /><em>陳琬琛</em></p>
-<p>羅淑佩回應後，黃家華及工聯會郭兆源舉手希望有第二輪發言，陳琬琛會議甫開始已表示，由於今天議程眾多，所以只准一輪發言，每名議員發言限時一分半鐘。羅淑佩在會前亦曾邀請議員就「易通行」運作提供意見，但議程中並無人提及。</p>
+<p>羅淑佩回應後，黃家華及工聯會葛兆源舉手希望有第二輪發言，陳琬琛會議甫開始已表示，由於今天議程眾多，所以只准一輪發言，每名議員發言限時一分半鐘。羅淑佩在會前亦曾邀請議員就「易通行」運作提供意見，但議程中並無人提及。</p>
 </div></div></div>
