--- a/_posts/2023-05-30-INMEDIA-行會通過巴士加價3.9至7-林世雄-加幅溫和-合適.html
+++ b/_posts/2023-05-30-INMEDIA-行會通過巴士加價3.9至7-林世雄-加幅溫和-合適.html
@@ -10,7 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/05301932-01.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>行政會議批准5間巴士公司申請加價，加幅約3.9至7%，當局估計乘客每程票價加價不足一元，新票價將在6月18日起實施。運輸及物流局局長林世雄形容加幅溫和、合適，而當局已作把關：「我哋都明白，加價無論佢多定少，都唔會受歡迎嘅，亦都會為市民帶嚟一啲額外嘅負擔，但巴士公司都需要額外嘅財政資源維持一啲優質、高效同埋安全嘅高效服務。」</p>
 <p>5間巴士公司在去年分別申請加價，龍運申請加幅為8.5%，在扣除隧道費基金後，今次獲批加幅為4.2%，至於九巴申請加幅9.5%，最終僅獲批加幅3.9%。</p>
-<p>城巴／新巴的專營權一，即港島及過海巴士網絡專營權申請票價劃一調高2元，獲批加幅4.9%，而專營權二即機場及北大嶼山巴士網絡專營權申請加幅23%，A線和NA線為50%，今次獲批加幅4.2%。另外，大嶼山巴士申請加幅9.8%，最終獲批7%。</p>
+<p>新巴及城巴專營權一（港島及過海巴士網絡專營權）申請票價劃一調高2元，獲批加幅4.9%，而專營權二即機場及北大嶼山巴士網絡專營權申請加幅23%，A線和NA線為50%，今次獲批加幅4.2%。另外，大嶼山巴士申請加幅9.8%，最終獲批7%。</p>
 <p><strong>政府：以極為審慎態度處理加價申請</strong></p>
 <p>林世雄下午見記者回應加幅，稱政府以極為審慎的態度處理加價申請，強調已致力減少加價對民生的影響，並同時維持巴士公司財務的可持續性。他重申，當局已為市民嚴格把關，「加幅維持喺比較溫和嘅水平」，大多數專營權的加幅為4至5%。</p>
 <p>有議員早前質疑巴士公司申請的加幅是開天殺價，林世雄表示，加價可以改善巴士公司財政狀況，可投入更多資源改善服務，包括安全，及引入更多環保巴士、改善員工工資水平和工作環境，「更加可以留到啲人才」。他提到，當局已全盤考慮巴士公司的財政狀況、前景、公眾接受程度、負責能力，及巴士服務質量，現時方案有充分數據基礎，並且考慮到社會經濟最新發展。</p>
