--- a/_posts/2023-05-30-PQ-侯友宜稱核能是選項-民進黨-核廢料要放哪裡.html
+++ b/_posts/2023-05-30-PQ-侯友宜稱核能是選項-民進黨-核廢料要放哪裡.html
@@ -8,11 +8,11 @@ tags: blog
 author: 林志鴻
 ---
 
-<p>中國國民黨總統參選人侯友宜昨（30）日稱核能是選項，今日接受媒體聯訪說明他的能源政策白皮書將與專家討論後，7 月會提出完整論述。行政院長陳建仁回應，核廢料處理對全世界來說都相當困難，侯友宜應以負責任的態度說明如何處理核廢料。民進黨發言人林楚茵質疑，請問侯友宜規劃的核廢料要放哪裡，又要如何妥善處理，請給人民一個明確的答案。</p>
+<p>中國國民黨總統參選人侯友宜昨日稱核能是選項，今日接受媒體聯訪說明他的能源政策白皮書將與專家討論後，7 月會提出完整論述。行政院長陳建仁回應，核廢料處理對全世界來說都相當困難，侯友宜應以負責任的態度說明如何處理核廢料。民進黨發言人林楚茵質疑，請問侯友宜規劃的核廢料要放哪裡，又要如何妥善處理，請給人民一個明確的答案。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/48f9815b-1024x768_wmky_0_c20230530000059.jpg" alt="" class="wp-image-138177" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/48f9815b-1024x768_wmky_0_c20230530000059.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/48f9815b-1024x768_wmky_0_c20230530000059-300x225.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/48f9815b-1024x768_wmky_0_c20230530000059-768x576.jpg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>國民黨總統參選人侯友宜（前右）30 日接受媒體聯訪表示，他的能源政策白皮書與專家討論後，7 月會提出完整論述／圖：中央社記者王鴻國攝 2023 年 5 月 30 日。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/7b67103e-1081x768_wmky_0_c20230517000110.jpeg" alt="國民黨於中常會上正式宣佈徵召侯友宜競選 2024 年總統／圖：中央社提供。" class="wp-image-136868" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/7b67103e-1081x768_wmky_0_c20230517000110.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/7b67103e-1081x768_wmky_0_c20230517000110-300x213.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/7b67103e-1081x768_wmky_0_c20230517000110-768x546.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>國民黨總統參選人侯友宜 30 日接受媒體聯訪表示，他的能源政策白皮書與專家討論後，7 月會提出完整論述／圖：中央社。</figcaption></figure></div>
 
 
 
