--- a/_posts/2023-05-31-INMEDIA-建制-kol-拍片唱好-完善地區治理-設計似足the-first-take.html
+++ b/_posts/2023-05-31-INMEDIA-建制-kol-拍片唱好-完善地區治理-設計似足the-first-take.html
@@ -20,7 +20,7 @@ author: 獨媒報導
 <p>然而，《完善地區治理》MV有使用後製，包括加插政府公布相關措施的記者會，以及官員落區推廣的相片；MV亦展示18區區議會的Logo，上方標示「2020至2023年度的區議會共有479個議席」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/DE68X3388H" title="螢幕擷取畫面 2023-05-31 185629"><img src="https://live.staticflickr.com/65535/52939225397_ddbba93735_b.jpg" width="1024" alt="螢幕擷取畫面 2023-05-31 185629" /></a><br /><em>影片截圖</em></p>
 <p><strong>高松傑指製作4天內完工：這就是我們的中國速度</strong></p>
-<p>MV簡介提到，政府公布「完善地區治理建議方案」，重塑區議會及強化地區治理架構，網絡紅人工作者協會唱出對新方案的支持，希望區議會往後能發揮更大效能，成為政府施政的助力。簡介指出，林伯強老師及成員只花24小時便完成曲詞，期望《2023年區議會（修訂）條例草案》能於立法會暑期休會前通過，為各區治理工作開創新篇章。</p>
+<p>MV簡介提到，政府公布「完善地區治理建議方案」，重塑區議會及強化地區治理架構，網絡紅人工作者協會唱出對新方案的支持，希望區議會往後能發揮更大效能，成為政府施政的助力。簡介指出，林伯強及成員只花24小時便完成曲詞，期望《2023年區議會（修訂）條例草案》能於立法會暑期休會前通過，為各區治理工作開創新篇章。</p>
 <p>高松傑則在個人Facebook表示，「創作24小時，錄+拍3小時+3日製作，4天內完工，這就是我們的中國速度」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/PXzgw96414" title="DSC_9002"><img src="https://live.staticflickr.com/65535/52494291016_ae95e95f52_b.jpg" width="1024" alt="DSC_9002" /></a><br /><em>高松傑（資料圖片）</em></p>
 </div></div></div>
