--- a/_posts/2023-05-31-INMEDIA-曾國衞-2019年-反中亂港份子-騙取選票和議席-篡奪區議會控制權.html
+++ b/_posts/2023-05-31-INMEDIA-曾國衞-2019年-反中亂港份子-騙取選票和議席-篡奪區議會控制權.html
@@ -24,5 +24,5 @@ author: 獨媒報導
 <p>新思維狄志遠在二讀後對記者表示，曾國衞對區議會作出嚴厲指控，但認為市民當時將對政府的不滿，透過區議會選舉表達，亦不等如民主政制發展錯誤。他表示，不希望改革後的區議會淪為「啦啦隊」、「推銷員」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/732a3dKef7" title="DSC_1120"><img src="https://live.staticflickr.com/65535/52939566314_5ae187572a_b.jpg" width="1024" alt="DSC_1120" /></a><br /><em>狄志遠</em></p>
 <p>對於曾國衞指區議會日後將「五光十色」，狄志遠指，要有不同政治光譜人士願意參選，又指據其過往觀察，不少委任議員相對被動，關注委任及來自三會的議員如何積極發揮。</p>
-<p>《獨媒》問狄志遠是否會支持草案，他就表示現時仍言之尚早，指新思維需時消化「完善」區議會，但會積極考慮參選。</p>
+<p>記者問狄志遠是否會支持草案，他就表示現時仍言之尚早，指新思維需時消化「完善」區議會，但會積極考慮參選。</p>
 </div></div></div>
