--- a/_posts/2023-05-31-PQ-中國威脅下的新華盛頓共識.html
+++ b/_posts/2023-05-31-PQ-中國威脅下的新華盛頓共識.html
@@ -32,7 +32,7 @@ author: 張東和
 
 
 
-<p class="pqnote">新華盛頓共識試圖改變 1989 年以來，放任式的市場經濟的新自由主義框架，當然中國也是加入世界貿易體系的受惠者之一。不只是美國共識，目的還要重塑全球的經濟秩序：如蘇利文所說的「將建立一個更公平、更持久的全球經濟秩序，造福於我們自己和世界各地的人民」。</p>
+<p class="pqnote">新華盛頓共識試圖改變 1989 年以來，放任式的市場經濟的新自由主義框架，當然中國也在舊的華盛頓共識所形成世界貿易體系的受惠者之一。蘇利文提到新華盛頓共識不只是美國共識，目的還要重塑全球的經濟秩序：如蘇利文所說的「將建立一個更公平、更持久的全球經濟秩序，造福於我們自己和世界各地的人民」。</p>
 
 
 
