--- a/_posts/2023-05-31-PQ-王婉諭放棄北市大安區-民進黨可望與苗博雅合作.html
+++ b/_posts/2023-05-31-PQ-王婉諭放棄北市大安區-民進黨可望與苗博雅合作.html
@@ -74,7 +74,7 @@ author: 李晏蓉
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-1024x683.jpg" alt="" class="wp-image-137387" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>傳民進黨將與苗博雅合作，卻遭部分創黨元老反對，呼籲把機會讓給黨內人才／圖：苗博雅提供。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-1024x683.jpg" alt="" class="wp-image-137387" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/05/fdc52c10-img_8272-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>傳民進黨將與苗博雅合作，卻遭部分創黨元老反對，呼籲把機會讓給黨內人才／圖：苗博雅提供。</figcaption></figure></div>
 
 
 
