--- a/_posts/2023-05-31-INMEDIA-曾國衞-2019年-反中亂港份子-騙取選票和議席-篡奪區議會控制權.html
+++ b/_posts/2023-05-31-INMEDIA-曾國衞-2019年-反中亂港份子-騙取選票和議席-篡奪區議會控制權.html
@@ -19,7 +19,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/K63J760q94" title="無標題"><img src="https://live.staticflickr.com/65535/52938819057_a827822d89_b.jpg" width="1024" alt="無標題" /></a><br /><em>曾國衞</em></p>
 <p><strong>引習近平曾講述內容  曾國衞：要更好地為民執政</strong></p>
 <p>在改革後，區議會只保留兩成直選議席，直選參選人要取得「三會」委員各3個提名，共9個提名才有資格入閘，民政事務處專員日行將兼任區議會主席。</p>
-<p>曾國衞強調，重塑區議會能提升地區治理的效能，但認為這仍然不足，當局應着力提高治理水平、切實排解民生憂難，及共同維護和諧穩定，更引用國家主席習近平曾講述的內容，「民惟邦本，本固邦寧」、「江山就是人民、人民就是江山」等，要更好地為民執政、為人民創造幸福美好的生活。</p>
+<p>曾國衞強調，重塑區議會能提升地區治理的效能，但認為這仍然不足，當局應着力提高治理水平、切實排解民生憂難，及共同維護和諧穩定，更引用國家主席習近平曾講述的內容，「民惟邦本，本固邦寧」、「江山就是人民、人民就是江山」等，要更好地為民執政、為人民創造幸福美好的生活。曾國衞表示，要從制度上確保「愛國者治港」的原則得以全面貫徹落實，令區議會牢牢掌握在愛國者手裏，並嚴格按照《基本法》規定發揮好其諮詢和服務功能，為特區的地區治理工作作出應有的貢獻。</p>
 <p><strong>曾國衞稱區議會將五光十色  狄志遠：需不同政治光譜人士參選</strong></p>
 <p>新思維狄志遠在二讀後對記者表示，曾國衞對區議會作出嚴厲指控，但認為市民當時將對政府的不滿，透過區議會選舉表達，亦不等如民主政制發展錯誤。他表示，不希望改革後的區議會淪為「啦啦隊」、「推銷員」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/732a3dKef7" title="DSC_1120"><img src="https://live.staticflickr.com/65535/52939566314_5ae187572a_b.jpg" width="1024" alt="DSC_1120" /></a><br /><em>狄志遠</em></p>
