--- a/_posts/2023-05-31-PQ-中國威脅下的新華盛頓共識.html
+++ b/_posts/2023-05-31-PQ-中國威脅下的新華盛頓共識.html
@@ -8,7 +8,9 @@ tags: blog
 author: 張東和
 ---
 
-<p>美國白宮國家安全顧問蘇利文（Jake Sullivan），在今（2023）年 4 月 27 日提出「新華盛頓共識」，可以視為美國民主黨執政下，改變自 1989 年華盛頓共識提出以來，結合市場自由與經濟安全的新共識。</p>
+<p>白宮國家安全顧問蘇利文（Jake Sullivan），在今（2023）年 4 月 27 日提出「新華盛頓共識」，可以視為美國民主黨執政下，改變自 1989 年華盛頓共識提出以來結合市場自由與經濟安全的新共識。</p>
+<p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230531-1/">中國威脅下的新華盛頓共識</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>美國白宮國家安全顧問蘇利文（Jake Sullivan），在今（2023）年 4 月 27 日提出「新華盛頓共識」，可以視為美國民主黨執政下，改變自 1989 年華盛頓共識提出以來，結合市場自由與經濟安全的新共識。</p>
 
 
 
