--- a/_posts/2023-05-31-PQ-俄羅斯指烏克蘭恐攻莫斯科-瓦格納首腦-房子燒掉算了.html
+++ b/_posts/2023-05-31-PQ-俄羅斯指烏克蘭恐攻莫斯科-瓦格納首腦-房子燒掉算了.html
@@ -8,7 +8,9 @@ tags: blog
 author: 王雪俐
 ---
 
-<p>週二（5 月 30 日）克里姆林宮發言人培斯科夫（Dmitry Peskov）表示，當天烏克蘭出動八架無人機，「對莫斯科住宅展開恐怖攻擊」，所幸全部都為俄羅斯防空系統摧毀。他說這「絕對是基輔政權發動的攻擊」，並以此為「持續開展特殊軍事行動並實現既定目標的必要性」。培斯科夫還說，總統蒲亭一早就開始工作，已經透過相關部門獲得情報。</p>
+<p>5月30日克里姆林宮發言人培斯科夫（Dmitry Peskov）表示，當天烏克蘭出動八架無人機，「對莫斯科住宅展開恐怖攻擊」，所幸全部都為俄羅斯防空系統摧毀。他說這「絕對是基輔政權發動的攻擊」，並以此為「持續開展特殊軍事行動並實現既定目標的必要性」。培斯科夫還說，總統蒲亭一早就開始工作，已經透過相關部門獲得情報。</p>
+<p>The post <a href="https://pourquoi.tw/intlnews-euaf-230601-1/">俄羅斯指烏克蘭恐攻莫斯科​    瓦格納首腦：房子燒掉算了</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>週二（5 月 30 日）克里姆林宮發言人培斯科夫（Dmitry Peskov）表示，當天烏克蘭出動八架無人機，「對莫斯科住宅展開恐怖攻擊」，所幸全部都為俄羅斯防空系統摧毀。他說這「絕對是基輔政權發動的攻擊」，並以此為「持續開展特殊軍事行動並實現既定目標的必要性」。培斯科夫還說，總統蒲亭一早就開始工作，已經透過相關部門獲得情報。</p>
 
 
 
