--- a/_posts/2023-05-31-PQ-捷克學者-中國資助組織及智庫在歐洲-如雨後春筍-歐盟擬代理人法補破網.html
+++ b/_posts/2023-05-31-PQ-捷克學者-中國資助組織及智庫在歐洲-如雨後春筍-歐盟擬代理人法補破網.html
@@ -9,6 +9,8 @@ author: 王雪俐
 ---
 
 <p>中國大外宣無所不在，但在歐洲，很少有人意識到這一點。專研外國影響力的捷克學者卡拉斯蔻娃（Ivana Karásková）指出，中國在從事戰狼外交的同時，也一直在秘密資助歐洲智庫、學術機構及非營利組織，但歐盟國家對此視而不見，又以東歐以外國家為然，這可能是出於無知，也可能是刻意不願看見。</p>
+<p>The post <a href="https://pourquoi.tw/intlnews-euaf-230601-3/">捷克學者：中國資助組織及智庫在歐洲「如雨後春筍」　歐盟擬代理人法補破網</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>中國大外宣無所不在，但在歐洲，很少有人意識到這一點。專研外國影響力的捷克學者卡拉斯蔻娃（Ivana Karásková）指出，中國在從事戰狼外交的同時，也一直在秘密資助歐洲智庫、學術機構及非營利組織，但歐盟國家對此視而不見，又以東歐以外國家為然，這可能是出於無知，也可能是刻意不願看見。</p>
 
 
 
