--- a/_posts/2023-05-31-PQ-王婉諭放棄北市大安區-民進黨可望與苗博雅合作.html
+++ b/_posts/2023-05-31-PQ-王婉諭放棄北市大安區-民進黨可望與苗博雅合作.html
@@ -8,7 +8,10 @@ tags: blog
 author: 李晏蓉
 ---
 
-<p>時代力量今天召開「 2024 區域立委第二波提名」記者會，徵召身兼黨主席的時力現任立委王婉諭參選新竹縣第 2 選區立委，而非先前爭取的台北市大安區。時力表示，這是經過選區特性、對手實力等各層次條件評估下，所作的決定。</p>
+<p>時代力量徵召身兼黨主席的時力現任立委王婉諭參選新竹縣第 2 選區立委，而非先前爭取的台北市大安區。時力表示，這是經過選區特性、對手實力等各層次條件評估下，所作的決定。<br />
+至於民進黨北市大安區人選，將可望在民主大聯盟的號召下與苗博雅合作，但今日卻有多位民進黨創黨元老赴黨中央抗議，呼籲要提名自家人。</p>
+<p>The post <a href="https://pourquoi.tw/taiwan-news-20230531-2/">王婉諭放棄北市大安區　民進黨可望與苗博雅合作</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>時代力量今天召開「 2024 區域立委第二波提名」記者會，徵召身兼黨主席的時力現任立委王婉諭參選新竹縣第 2 選區立委，而非先前爭取的台北市大安區。時力表示，這是經過選區特性、對手實力等各層次條件評估下，所作的決定。</p>
 
 
 
