--- a/_posts/2023-05-31-PQ-艾爾段勝選想要f-16-拜登暗示拿瑞典入北約交換.html
+++ b/_posts/2023-05-31-PQ-艾爾段勝選想要f-16-拜登暗示拿瑞典入北約交換.html
@@ -8,7 +8,9 @@ tags: blog
 author: 王雪俐
 ---
 
-<p>週日（5 月 28 日）土耳其進行總統大選第二輪投票，果然如外界所預期，現任總統艾爾段（Recep Tayyip Erdogan）囊括 52.1% 的選票，輕鬆擊敗在野黨聯合推出的對手基里達歐魯（Kemal Kilicdaroglu，得票 47.9%），執政即將邁入第三個十年，但也讓土耳其持續陷於民意分裂和經濟衰退。投資人和經濟學家表示，土耳其總統大選第一輪投票（5 月 14 日）前，土耳其外匯存底大幅下滑，恐怕這個趨勢還將繼續下去。</p>
+<p>5月28日土耳其進行總統大選第二輪投票，果然如外界所預期，現任總統艾爾段囊括52.1%的選票，輕鬆擊敗在野黨聯合推出的對手基里達歐魯，執政即將邁入第三個十年，但也讓土耳其持續陷於民意分裂和經濟衰退。投資人和經濟學家表示，土耳其總統大選第一輪投票（14日）前，土耳其外匯儲備大幅下滑，恐怕這個趨勢還將繼續下去。</p>
+<p>The post <a href="https://pourquoi.tw/intlnews-euaf-230601-2/">艾爾段勝選想要F-16　拜登暗示拿瑞典入北約交換</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>週日（5 月 28 日）土耳其進行總統大選第二輪投票，果然如外界所預期，現任總統艾爾段（Recep Tayyip Erdogan）囊括 52.1% 的選票，輕鬆擊敗在野黨聯合推出的對手基里達歐魯（Kemal Kilicdaroglu，得票 47.9%），執政即將邁入第三個十年，但也讓土耳其持續陷於民意分裂和經濟衰退。投資人和經濟學家表示，土耳其總統大選第一輪投票（5 月 14 日）前，土耳其外匯存底大幅下滑，恐怕這個趨勢還將繼續下去。</p>
 
 
 
