--- a/_posts/2023-05-31-PQ-邱國禎-世紀大劫難-台灣史上少見的經濟迫害-下.html
+++ b/_posts/2023-05-31-PQ-邱國禎-世紀大劫難-台灣史上少見的經濟迫害-下.html
@@ -9,6 +9,8 @@ author: 邱 國禎
 ---
 
 <p>中國國民黨政權劫收的龐大資產，除了機關、企業工廠接收後維持運作之外，民營企業、商店及民房等分批標售；比蔣軍軍備精良的機艦槍砲等軍事武器都送往中國，但數量究竟有若干，在警備總部的軍事接收總報告書裡不是語焉不詳就是缺漏。至於民生物資只有第一批接收的米糖有紀錄，後續源源不絕劫往中國的則完全黑箱。</p>
+<p>The post <a href="https://pourquoi.tw/infrequent-economic-persecution-in-taiwan-3/">【邱國禎】世紀大劫難：台灣史上少見的經濟迫害（下）</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>中國國民黨政權劫收的龐大資產，除了機關、企業工廠接收後維持運作之外，民營企業、商店及民房等分批標售；比蔣軍軍備精良的機艦槍砲等軍事武器都送往中國，但數量究竟有若干，在警備總部的軍事接收總報告書裡不是語焉不詳就是缺漏。至於民生物資只有第一批接收的米糖有紀錄，後續源源不絕劫往中國的則完全黑箱。</p>
 
 
 
