--- a/_posts/2023-05-31-PQ-郭柯海邊漫遊談-山盟海誓-侯友宜被邊緣化的開始.html
+++ b/_posts/2023-05-31-PQ-郭柯海邊漫遊談-山盟海誓-侯友宜被邊緣化的開始.html
@@ -8,7 +8,10 @@ tags: blog
 author: 李晏蓉
 ---
 
-<p>金門浯島邑主城隍爺遷治 343 週年慶典，郭台銘與柯文哲都到金門參拜，2 人更在參拜和抬轎時兩度同框，席間簡短交談，互動熱絡。</p>
+<p>金門浯島邑主城隍爺遷治 343 週年慶典，郭台銘與柯文哲都到金門參拜，2 人更在參拜和抬轎時兩度同框，席間簡短交談，互動熱絡。<br />
+根據郭台銘臉書顯示，晚間兩人又相約在小金門海邊散步聊天，更傳出跟柯文哲感性表達「海誓山盟」，引發外界對於「郭柯配」的猜測。</p>
+<p>The post <a href="https://pourquoi.tw/taiwan-news-20230531-1/">郭柯海邊漫遊談「山盟海誓」　侯友宜被邊緣化的開始？</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>金門浯島邑主城隍爺遷治 343 週年慶典，郭台銘與柯文哲都到金門參拜，2 人更在參拜和抬轎時兩度同框，席間簡短交談，互動熱絡。</p>
 
 
 
