--- a/_posts/2023-06-01-PQ-關係深化-台美21貿易倡議-首批協定今晚簽署.html
+++ b/_posts/2023-06-01-PQ-關係深化-台美21貿易倡議-首批協定今晚簽署.html
@@ -8,7 +8,9 @@ tags: blog
 author: 江 珀石
 ---
 
-<p>行政院經貿談判辦公室今（ 1 日）上午宣布，台美雙方將在台灣時間 1 日晚間 10 時（華府時間 1 日上午 10 時），於華府簽署「台美 21 世紀貿易倡議」的首批協定（first agreement）。此倡議為台美雙方自 1979 年以來所簽署結構最完整的貿易協定，也象徵雙方在未來簽署自由貿易協定（FTA）踏出重要的一步。</p>
+<p>行政院經貿談判辦公室今（1 日）上午宣布，台美雙方將在台灣時間 1 日晚間 10 時（華府時間 1 日上午 10 時），於華府簽署「台美 21 世紀貿易倡議」的首批協定（first agreement）。此倡議為台美雙方自 1979 年以來所簽署結構最完整的貿易協定，也象徵雙方在未來簽署自由貿易協定（FTA）踏出重要的一步。</p>
+<p>The post <a href="https://pourquoi.tw/taiwan-news-20230601/">關係深化！《台美21貿易倡議》首批協定今晚簽署</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+										<p>行政院經貿談判辦公室今（ 1 日）上午宣布，台美雙方將在台灣時間 1 日晚間 10 時（華府時間 1 日上午 10 時），於華府簽署「台美 21 世紀貿易倡議」的首批協定（first agreement）。此倡議為台美雙方自 1979 年以來所簽署結構最完整的貿易協定，也象徵雙方在未來簽署自由貿易協定（FTA）踏出重要的一步。</p>
 
 
 
@@ -20,7 +22,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8.jpg" alt="" class="wp-image-113841" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8-768x512.jpg 768w" sizes="(max-width: 613px) 100vw, 613px" /><figcaption>蔡英文先前表示，台灣會持續與美國努力建立更緊密經貿關係，台美 21 世紀貿易倡議宣布展開協商談判，她有信心透過這項貿易倡議，與美國簽署高標準經貿協議，促成經貿發展。另也希望未來能簽署避免雙重課稅協定，為彼此打造更良好的經濟環境<br>（圖：總統府）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8.jpg" alt="" class="wp-image-113841" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8.jpg 799w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/09/fef1615f-376b-4cc8-96bd-3b3fefd762c8-768x512.jpg 768w" sizes="(max-width: 613px) 100vw, 613px" /><figcaption>蔡英文先前表示，台灣會持續與美國努力建立更緊密經貿關係，台美 21 世紀貿易倡議宣布展開協商談判，她有信心透過這項貿易倡議，與美國簽署高標準經貿協議，促成經貿發展。另也希望未來能簽署避免雙重課稅協定，為彼此打造更良好的經濟環境<br>（圖：總統府）</figcaption></figure></div>
 
 
 
