--- a/_posts/2023-06-01-INITIUM-专访李立峰-公开的六四纪念消失了-记忆会断裂吗.html
+++ b/_posts/2023-06-01-INITIUM-专访李立峰-公开的六四纪念消失了-记忆会断裂吗.html
@@ -9,25 +9,13 @@ author: 端传媒记者李慧筠、符雨欣 发自 新加坡
 ---
 
 <p>「任何社会都有保留一种记忆的能力，就算多细小也好。」</p><p>端传媒记者李慧筠、符雨欣 发自 新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230602-hongkong-64-memory-francis-lee/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/1fa40f83221f458b8da64187d2832950.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="香港中文大学新闻与传播学院教授李立峰。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">香港中文大学新闻与传播学院教授李立峰。摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p><small>编按：进入六四34周年，香港社运退潮，防疫限制全数撤销，复常后的首个六四晚上，维园足球场及草地将由香港广东社团总会以家乡情为题，举办庆回归活动。此前，康乐及文化事务署围封起曾经布满烛光海的部分位置，指要进行维修。</small></p>
-<p>六四前，国安处以涉“煽动他人颠覆国家政权罪”案件为由，检走前年在香港大学被拆件移离、象征六四死难者的“国殇之柱”。踏入6月1日，前公民党区议员黄文萱主理的深水埗“猎人书店”、前西贡区议员陈嘉琳开设的“西多”均有消防处、屋宇署和警员等政府人员到访；陈早前表示收到警方查询，问她会否在六四举行活动。保安局局长邓炳强曾指，未来数天是“特别的日子”，很多人会利用这个日子危害国安。而特首李家超被记者问到个人到维园悼念六四会否违法，要求给予是或否答案时，他只强调出席者需准备面对后果。六四晚会如同去年，似乎难以再现。</p>
+            <figcaption itemprop="caption">香港中文大学新闻与传播学院教授李立峰。摄：林振东/端传媒<span class="credit"></span></figcaption></figure><p><small>编按：进入六四34周年，香港社运退潮，防疫限制全数撤销，复常后的首个六四晚上，维园足球场及草地将由香港广东社团总会以家乡情为题，举办庆回归活动。踏入6月1日，前公民党区议员黄文萱主理的深水埗“猎人书店”、前西贡区议员陈嘉琳开设的“西多”均有消防处、屋宇署和警员等政府人员到访；陈早前表示收到警方查询，问她会否在六四举行活动。保安局局长邓炳强曾指，未来数天是“特别的日子”，很多人会利用这个日子危害国安。而特首李家超被记者问到个人到维园悼念六四会否违法，要求给予是或否答案时，他只强调出席者需准备面对后果。六四晚会如同去年，似乎难以再现。</small></p>
 <p>维多利亚公园的六四烛光已经消失两年。面对限制，去年六四仍有人手执鲜花，打开手机灯光，在铜锣湾街上零散走着。而维园在警察严密的看守下，沉默地没入灯灭后的黑暗。公开的集体悼念消失，种种制度被打散，六四记忆是否已经走到断裂的开端？</p>
 <p>从2008年至2018年，香港中文大学新闻与传播学院教授李立峰、陈韬文合作研究香港人的六四记忆。李立峰总结，六四记忆在香港社会生成和延续的过程：社会事件超越个人，被赋予价值，而其延续依靠记忆动员、代际传递和制度化三个过程。当中传媒、组织、学校和家庭的代际传递有重要的角色。</p>
 <p>而今，许多与遗忘斗争的条件已然失效。记忆动员还有效吗？纪念六四的论述，跟当下的社会需求有什么关系？沉静的历史记忆，何时会被再度唤醒？关于六四，我们还可以讲什么？端传媒邀请李立峰和我们分享近年的观察，尝试回答这些问题，凝视历史在城市和人心里斧凿的痕迹。</p>
- 
- 
-
- 
- 
- 
- 
- 
- 
- 
+<p><strong>以下为对谈节录：</strong><br><br><strong>端传媒（端）：以前媒体很早就报导六四专题，现在的新闻则是维园场地被建制团体申请作销售活动，或者警方扣起国殇之柱等等。六四前夕，你观察到坊间对于六四的讨论是怎样的呢？</strong><br><br><strong>李立峰（李）：</strong>对于六四的讨论是，大家讲不到嘛。要看的第一件事就是媒体讲不到。这固然有一部分可能是因为所谓（新闻）自由、审查的问题，但其实也有很实际的问题——你没有支联会，你无嘢可以讲（你没有东西可以说）。比如过去一年多，我做过一些研究访问到部分主流媒体的记者，有些记者会说：“其实不是完全不能做。”如果factual地做……起码不是不能做，问题是没事发生。事实上，你不把国殇之柱拉出来，更加没事发生、没人会讲。</p>
  
 
- 
- 
  
  
  
@@ -46,25 +34,8 @@ author: 端传媒记者李慧筠、符雨欣 发自 新加坡
  
  
  
-
- 
- 
- 
- 
- 
- 
  
 
- 
- 
- 
- 
- 
- 
- 
-
- 
- 
  
  
  
@@ -89,7 +60,35 @@ author: 端传媒记者李慧筠、符雨欣 发自 新加坡
  
  
  
-<p><strong>以下为对谈节录：</strong><br><br><strong>端传媒（端）：以前媒体很早就报导六四专题，现在的新闻则是维园场地被建制团体申请作销售活动，或者警方扣起国殇之柱等等。六四前夕，你观察到坊间对于六四的讨论是怎样的呢？</strong><br><br><strong>李立峰（李）：</strong>对于六四的讨论是，大家讲不到嘛。要看的第一件事就是媒体讲不到。这固然有一部分可能是因为所谓（新闻）自由、审查的问题，但其实也有很实际的问题——你没有支联会，你无嘢可以讲（你没有东西可以说）。比如过去一年多，我做过一些研究访问到部分主流媒体的记者，有些记者会说：“其实不是完全不能做。”如果factual地做……起码不是不能做，问题是没事发生。事实上，你不把国殇之柱拉出来，更加没事发生、没人会讲。</p><p><a class="image" href="https://theinitium.com/article/20230602-hongkong-64-memory-francis-lee/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/2c4e0ad32b454fa29f1bebd5372b4fb9.JPG?imageView2/1/w/1080/h/810/format/jpg" alt="2022年6月4日，六四33周年，是香港维园没有合法集会的第3年，亦是首次无人申请举办集会。戴上印有交叉的口罩的社民连主席陈宝莹在铜锣湾进行默站，数分钟后即被警察要求离开。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+
+ 
+ 
+ 
+ 
+ 
+ 
+<p><a class="image" href="https://theinitium.com/article/20230602-hongkong-64-memory-francis-lee/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/2c4e0ad32b454fa29f1bebd5372b4fb9.JPG?imageView2/1/w/1080/h/810/format/jpg" alt="2022年6月4日，六四33周年，是香港维园没有合法集会的第3年，亦是首次无人申请举办集会。戴上印有交叉的口罩的社民连主席陈宝莹在铜锣湾进行默站，数分钟后即被警察要求离开。摄：林振东/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2022年6月4日，六四33周年，是香港维园没有合法集会的第3年，亦是首次无人申请举办集会。戴上印有交叉的口罩的社民连主席陈宝莹在铜锣湾进行默站，数分钟后即被警察要求离开。摄：林振东/端传媒<span class="credit"></span></figcaption><p></p><p>第二点，这是比较大的背景，未必直接跟六四有关。现在的香港公民社会，会参与到民主运动的最核心的组织消失了，像教协等等。另外，仍然存在的公民社会组织或人，其实他们也有需要去限制自己的工作范围。他们都有个倾向，就是“讲自己嘢”就算了，变得更加没有任何人、任何组织会发声。</p><p>比如环保组织，我真的只做环保组织，所有跟环保没关系的，我不碰。以往个别环保组织可能会说：喂，整个公民社会很多事是环环相扣的啊。环保组织之外，更加明显的是性别组织。民阵（民间人权阵线）里面其实有不少性别议题的组织，岑子杰也是彩虹运动一员。现在讲性别议题的组织仍然存在，但就回去自己的范畴。</p><p>今年六四当天的情况会怎样，我不知道。对我来说的观察点是，今年2023年是第一年，它（政府）不可以再把“疫情”搬出来，它失去疫情这个大借口。过去两年，它一方面用疫情禁止任何实际的集会，实际的行为；亦用限聚令，如果你在铜锣湾逛街，亦会用限聚令作为压制的理据。</p><p>去年邓炳强局长也说不要“以身试法”。那个语境里面的“以身试法”，有种模糊性，因为跟六四有关，大家会想到国家安全。但起码表面上，“不要以身试法”是指疫情的规矩。但今年理论上他不能这样说，如果他这样说，就即开宗明义说：“悼念是犯法”。</p><p>今年3月将军澳游行（将军澳反填海游行大会）就是了。他不可以什么游行集会都不批准，但是他会用很严格的管理方式。为何游行人士要戴名牌？要防范人突然加入。以上说的是集会。如果集会可能有人骑劫，前年那种很自发性的，例如我有200支蜡烛，6月4日6时在社区派发，可以吗？</p><p>但过去两三年，他增加压力的背后始终有疫情，疫情某程度上是facilitate了他那一套做法。今年没有疫情，假设他不想开宗明义说不让你办，真的宣判六四是不可以的，假设他不想去到这么尽，做法不外乎就是营造一种社会压力啰？这的确影响去铜锣湾的人数和个别组织机构，例如香港天主教区不再办天主弥撒。</p><p>我最近会有篇book chapter刊出，讲疫情下的六四纪念。当然不是纯粹讲香港疫情，亦涉及政治环境变化，其中提到官方营造出来的模糊状态。</p><p><a class="image" href="https://theinitium.com/article/20230602-hongkong-64-memory-francis-lee/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2019/06/4ae53639909e44ccbff111542ca8dc56.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="《苹果日报》有关六四的报道。摄：Stanley Leung/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">《苹果日报》有关六四的报道。摄：Stanley Leung/端传媒<span class="credit"></span></figcaption><p></p><p><strong>端：刚才谈到传媒，有记者跟你分享今年的六四报导做法或想法吗？</strong></p><p><strong>李：</strong>今年……真的不知道。我自己的判断是，对大部分主流传媒来说，就属于有事发生、它会报。去年已经是这样了，完全是最reactive的一种方式，有事发生再算。另外你也要看看个别网媒。不过，办新网媒的人始终有自己的风险判断。</p><p>传媒没有主动去做的空间。今年我预计有人仍然会逛逛铜锣湾，但六四前后两天，你不会预期有任何组织或人做任何事。变相媒体的报导有一个很基本的问题，就是他们没有了取材。</p><p>你想想，就算你不经不觉，以往六四其实有很多事在发生。除了六四晚会，支联会在前夕有游行，有各种各样的活动，清明花献花等等。其实有个记忆的动员周期。六四的Memory Mobilization Cycle是4月15日开始。像20或25周年的整数，起码《苹果日报》就会把报导做大，从1989年4月15日起每天跟你倒数，跟你去回顾。当然以往媒体也面对问题：每年都这样，有什么好做？没理由每年都“当年今日”吧？也会闷。</p><p><strong>端：现在，整个六四的记忆动员周期已经缩短，甚至没有了？</strong></p><p>对，基本上这个周期没有了。现在，社会上都没有“主动”的事情了。比如以往庄梅岩写《5月35日》可以公演，现在不会。民间、尤其文化艺术界会有各种各样演出和展览。去年发生什么事？还有一班大学生敢在中文大学放置迷你民主女神像，后来虽然提早结束，但无论如何有事发生。不过今时今日这些事真的会愈来愈难。今年还有没有？几年过后，还有没有一些人继续做一些事？</p><p><strong>端：除了传媒和组织，有中学老师跟我们表示基本上不会教六四，学校教材直接不提及六四。</strong></p><p><strong>李：</strong>这并不出奇。你见到尤其中、小学老师，他们不是直接面对国安法，他们要面对举报和DQ。只要有一个家长投诉，你就会很麻烦，你就有理说不清。教育局有教育局的判断。那件事很能理解。</p><p>你看见很多过往比较制度化的承传，其实都没有了。这固然是2020年后就开始发生的事。所谓“制度化”就是，这么多年六四慢慢在香港社会累积了一堆事物，那堆事物比较恒久地存在。比如当它进入教科书，这件事就是制度化了。以前通识教育的框架下有Other Learning Experience（OLE），很多中学老师办六四相关的讲座，是用OLE的名义，在中、小学也好，也要在框架中找到位置。所以你看到从教科书到课外活动，它都抹杀了，你就不会有那个位置。</p><p><a class="image" href="https://theinitium.com/article/20230602-hongkong-64-memory-francis-lee/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/c3575d3d79c8464f972afb4bd63f375c.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年5月3日，香港一间学校的课堂上，老师向学生简述六四当晚发生的事情前，会先让学生看一段由香港乐队Beyond演唱《抗战二十年》的MV。 摄：Stanley Leung/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">2019年5月3日，香港一间学校的课堂上，老师向学生简述六四当晚发生的事情前，会先让学生看一段由香港乐队Beyond演唱《抗战二十年》的MV。 摄：Stanley Leung/端传媒<span class="credit"></span></figcaption><p></p><p>现在很难制度化去做，而（纪念）会依赖真的很由下而上、很个人层面的行为。这完全是非制度化，完全是自己发起的。刚才说的，去年大学生办民主女神“寻宝游戏”。当然空间是否存在、或者空间有多少？亦要看究竟愿意尝试的人还有多少。</p><p>我刚才说“制度化”是指六四纪念、或者六四记忆本身有没有制度化。每个人的生存始终是在制度之中的。所以整个制度的转变，令你根本什么也不能说。又比如寻宝游戏都有制度问题：大学会怎样看待？会很高调地把你抓出来，说你有纪律问题抑或怎样呢？</p><p><strong>端：中、小学之外，大学里面还能教六四吗？</strong></p><p><strong>李：</strong>我想，这就涉及你在什么语境下教。起码大学不会跟你说不能讲。只不过，在开放的社会环境中，你的确可以在大学突然之间讲六四的，讲就讲，不讲就不讲，没所谓。我怀疑今时今日应该没有这件事。当然，就算你不是想讲政治，纯粹讲改革开放下的中国社会与经济发展，其实不讲六四是不合理的。这也是以往为何，以前的通识教科书，都会讲六四。以通识教科书讲六四不是着重军队镇压，而是讲改革开放引起贪污问题、开始官倒，很大不满累积到大爆发就是八九六四，不是下一个很强的道德判断去谴责谁，而是“这就是社会发展的一部分”。</p><p>今时今日，要看个别院系。我去年有讲六四，因为我那一科是Hong Kong Public Affairs，我讲某种香港文化社会发展，怎可能完全不提六四？你在一个合理的课程内容，我相信很多学者会尝试守这条线。如果教中国近代史，或者香港近代社会，香港人的身份认同转变，很难不说。</p><p><strong>端：刚才谈到组织、传媒和学校，图书馆也有下架书籍，家庭教育则比较私密。你之前所说“记忆动员”的各方面都变化不少。你觉得“记忆动员”还有效吗？还可能吗？</strong></p><p><strong>李：</strong>所谓的动员，是说现在到6月了，有些事去提醒大家、recall、recollect当年有这样的一件事。比强弱，当然是比以前弱很多很多。但是现在还有很由下而上的，甚至是个人身份做的事。它可能在个别情况下带动了传媒报导。</p><p>另一方面就是网络上的东西。现在也困难的，但6月4日换社交平台的profile picture、在Instagram上载相片，你仍然预期会存在。然后你在facebook，网络会看见海外的事情。这是一个颇奇特的状态，因为有些东西你是不能share的，看完不一定觉得有空间去分享、发表感想，但起码看见。</p><p><a class="image" href="https://theinitium.com/article/20230602-hongkong-64-memory-francis-lee/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2021/06/8063b54bfe394679a640f1d7cfef1fba.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年6月4日，英国伦敦，市民在当地中国领事馆外聚集，悼念六四32周年。摄：Stanley Leung/端传媒" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
