--- a/_posts/2023-06-01-INMEDIA-初選47人案-辯方指被告不曾就無差別否決財案達協議-法官周五就-共謀者原則-裁決.html
+++ b/_posts/2023-06-01-INMEDIA-初選47人案-辯方指被告不曾就無差別否決財案達協議-法官周五就-共謀者原則-裁決.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/61b.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>47人涉組織及參與民主派初選，被控「串謀顛覆國家政權」罪，16人不認罪，踏入審訊第61天。<a href="https://www.inmediahk.net/node/1096391/">控方應法官要求交代各被告和共謀者加入串謀的時間</a>，並列出可顯示被告參與串謀的證據。惟多名辯方大狀均指相關證據不充分，亦強調本案不曾達成無差別否決預算案的協議，只是從政者嘗試參與初選和表達一些主張，即使有協議也只是同意舉行初選為民主派爭勝算。</p>
-<p>其中吳政亨被控方指為組織者，其代表大狀強調吳雖與戴耀廷有聯繫並發起「三投三不投」約束初選參選人，但吳僅着重團結民主派，無意加入戴耀廷無差別否決預算案的串謀，與戴耀廷即使達成協議，也與本案協議不同。法官周五（2日）將就控方能否援引「共援者原則」作出裁決。</p>
+<p>其中吳政亨被控方指為組織者，其代表大狀強調吳雖與戴耀廷有聯繫並發起「三投三不投」約束初選參選人，但吳僅着重團結民主派，無意加入戴耀廷無差別否決預算案的串謀，與戴耀廷即使達成協議，也與本案協議不同。法官周五（2日）將就控方能否援引「共謀者原則」作出裁決。</p>
 <p><strong>辯方：提名表格和收據無說明各區確實達成之共識 不足以顯示參與串謀</strong></p>
 <p>控方今應法官要求提交各被告和共謀者加入串謀日期的列表，遭法官多番質疑，辯方其後進行回應。代表黃碧雲和林卓廷的大律師沈士文重申，《國安法》生效前的共謀者言行不能在「共謀者原則」下指證各被告，如要應用該原則便須先有獨立合理證據證明有串謀存在。而該原則如適用，則以被告加入串謀的日子為分界，此前的傳聞證據（hearsay evidence）均不得在該原則下呈堂，僅能顯示串謀的性質和範圍，只有此後的證據才能顯示被告的參與程度。</p>
 <p>沈並指，控方依賴被告報名初選的提名表格和按金收據作為各被告參與串謀的證據，但該兩份文件本身並沒有說明各區確實達成的共識，不足以證明被告參與串謀。</p>
@@ -47,7 +47,7 @@ author: 獨媒報導
 <p>石回應被告要定罪不僅在於他知情、亦需同意該共同目的，惟吳政亨的情況不同。但陳仲衡指，石援引的文章正顯示吳知道35+是關於否決預算案；李運騰亦指被告不一定需「打劫」，只是參與整個計劃的一部分也可入罪。石重申吳無意加入戴耀廷無差別否決預算案的串謀。</p>
 <p><strong>法官周五就能否引「共謀者原則」頒決定</strong></p>
 <p>法官陳慶偉終表示，將於周五（2日）就能否援引「共謀者原則」作出裁決，其中黃碧雲、林卓廷、何啟明、何桂藍等或會視乎結果提出毋須答辯。</p>
-<p>控方其後應石書銘要求傳召一名警方社交媒體專家證人作盤問，控方亦另傳召一名警方社交媒體專家證人，就戴耀廷一則帖文的修改紀錄作供。法官李運騰一度驚訝指以為控方已傳畢所有證人。</p>
+<p>控方其後應石書銘要求傳召一名警方社交媒體專家證人作盤問，控方亦另傳召一名警方社交媒體專家證人，就戴耀廷一則帖文作供。法官李運騰一度驚訝指以為控方已傳畢所有證人。</p>
 <p>就第二名證人，控方原稱只需5分鐘，惟最終該證人作供逾半小時仍未完成。陳慶偉面露不快，大聲叫控方問好問題，又質問控方為何只稱需5分鐘，並將案件押至明早續。</p>
 <p><strong>審訊第六十一日</strong><br /><a href="https://www.inmediahk.net/node/1096391/">控方呈各被告及共謀者加入串謀時間 官多番質疑</a><br />
 法官周五就「共謀者原則」裁決 辯方指被告不曾就無差別否決財案達協議</p>
