--- a/_posts/2023-06-02-INMEDIA-六四不應聚集-林定國-惟一建議是依法.html
+++ b/_posts/2023-06-02-INMEDIA-六四不應聚集-林定國-惟一建議是依法.html
@@ -9,6 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/03%201280_36.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>六四將至，在這<a href="https://bit.ly/43by5BH">「好特別嘅日子」</a>手持蠟燭到維園或街上，甚或一些並非公眾遊行及集會的聚集，究竟是否違法？正進行訪京行程的律政司司長林定國表示法律界線清晰，「咪就係法律規範嘅事情囉！」他又稱惟一建議是「任何市民做任何事情都必須依據法律進行。」</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/jz7Rq74d05" title="350941439_551774920501108_694883863060859339_n"><img src="https://live.staticflickr.com/65535/52944645721_823824aefa_b.jpg" width="1024" alt="350941439_551774920501108_694883863060859339_n" /></a><br /><em>林定國Facebook圖片</em></p>
 <p><strong>高先取消六四包場 林：唔會主動建議「市民做啲咩唔做啲咩」</strong></p>
 <p>周日是六四34周年「特別日子」，律政司司長林定國今午見傳媒時，被問到當局有否明確的違法界線，例如市民在街上或維園手持蠟燭。林定國稱「其實法律嘅界線好清晰，所謂嘅界線咪就係法律規範嘅事情囉！」重申《國安法》已訂明不得進行煽動顛覆國家政權的行為。</p>
 <p>被問到會否不建議市民當日進行集體聚集活動，林定國指「我唔會話自己主動建議，市民做啲咩唔做啲咩，我惟一會建議，就係任何市民做任何事情都必須依據法律進行。」</p>
