--- a/_posts/2023-06-02-PQ-中國對台經濟脅迫意圖扶植代理人-經民連籲聯合民主國家對抗極權.html
+++ b/_posts/2023-06-02-PQ-中國對台經濟脅迫意圖扶植代理人-經民連籲聯合民主國家對抗極權.html
@@ -14,7 +14,7 @@ author: 林奕辰
 
 
 
-<figure class="wp-block-image size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0.jpeg" alt="" class="wp-image-138426" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0-768x512.jpeg 768w" sizes="(max-width: 1009px) 100vw, 1009px" /><figcaption>經民連智庫今（2）日公布「中國對台經濟脅迫手段與因應」報告，分析中國對台提出貿易壁壘調查的戰略企圖。／圖：中央社</figcaption></figure>
+<figure class="wp-block-image size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0.jpeg" alt="" class="wp-image-138426" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ba966efe-2000x1333_wmky_68692335310637_0-768x512.jpeg 768w" sizes="(max-width: 1009px) 100vw, 1009px" /><figcaption>經民連智庫今（2）日公布「中國對台經濟脅迫手段與因應」報告，分析中國對台提出貿易壁壘調查的戰略企圖。／圖：中央社</figcaption></figure>
 
 
 
