--- a/_posts/2023-06-02-PQ-北約秘書長-所有盟國支持烏克蘭加入北約-俄羅斯無權置喙.html
+++ b/_posts/2023-06-02-PQ-北約秘書長-所有盟國支持烏克蘭加入北約-俄羅斯無權置喙.html
@@ -34,7 +34,7 @@ author: 張東和
 
 
 
-<p>至於何時烏克蘭加入北約？北約秘書長繼今年 4 月提到「所有盟國都同意烏克蘭加入北約」，這次非正式部長會議依然再次表明，除了駁斥俄羅斯對北約擴大的干涉，烏克蘭加入北約，是由北約和烏克蘭共同決定何時為適當的時機。</p>
+<p>至於何時烏克蘭加入北約？北約秘書長繼今年 4 月 20 日 首度訪問烏克蘭，曾提到「所有盟國都同意烏克蘭加入北約」，這次非正式部長會議依然再次表明，除了駁斥俄羅斯對北約擴大的干涉，烏克蘭加入北約，是由北約和烏克蘭共同決定何時為適當的時機。</p>
 
 
 
@@ -50,7 +50,7 @@ author: 張東和
 
 
 
-<p>去年北約領袖峰會，正值俄羅斯入侵烏克蘭，北約就已經承諾長期支援烏克蘭。畢竟還是以「支援」，仍希望透過外交協調，達成停火止戰。當時，烏克蘭總統澤倫斯基就提出要加入北約，但是並沒有明確答案。今年北約領袖峰會，<strong>烏克蘭正式加入北約的時機，是否就代表北約盟國已經準備好全力反攻俄羅斯的「適當時機」</strong>？</p>
+<p>去年北約領袖峰會，正值俄羅斯入侵烏克蘭，北約就已經承諾長期支援烏克蘭。畢竟還是以「支援」為主，仍希望透過外交協調，達成停火止戰。當時，烏克蘭總統澤倫斯基就提出要加入北約，但是並沒有得到明確答案。今年北約領袖峰會，<strong>烏克蘭正式加入北約的時機，是否就代表北約盟國已經準備好全力反攻俄羅斯的「適當時機」</strong>？這對目前的北約成員國的挑戰相當的大。</p>
 
 
 
@@ -58,11 +58,37 @@ author: 張東和
 
 
 
-<h3><strong>瑞典可望繼芬蘭之後加入北約&nbsp;</strong></h3>
+<h3>澤倫斯基：<strong>加入北約　就是烏克蘭最好的安全保障</strong></h3>
 
 
 
-<p>另一方面，芬蘭於今年 4 月 4 日，正式加入北約，成為第 31 個盟國。如上所述，要加入北約的國家，需要既有盟國的全體同意，與芬蘭一起申請加入北約的瑞典，由於土耳其的反對，尚無法加入。那是因為瑞典和芬蘭都反對土耳其打壓庫德族工人黨（PKK）。</p>
+<p>同一個時間，6 月 1 日也是國際兒童節，烏克蘭總統澤倫斯基在鄰國摩爾多瓦（Moldova）所舉辦的第 2 屆<strong>「歐洲政治共同體高峰會」（Summit of the European Political Community）</strong>，有 40 多個國家與會，包含歐盟 27 個會員國以及其他 20 個歐洲國家的領袖或代表皆出席了這場盛會。</p>
+
+
+
+<p>其中歐盟理事會主席、歐盟執委會主席、歐洲議會主席也都出席了這場峰會。除了地主國摩爾多瓦總統，還包含德國總理、法國總統、英國首相、羅馬尼亞總統、葡萄牙總理、阿爾巴尼亞總理、北馬其頓總理、義大利總理、西班牙首相、瑞士總統、捷克總理、亞塞拜然總統。<br><br>北約的 E-3 哨兵式空中預警機（AWACS）也在峰會期間進行全天候監控，以防俄羅斯有所動作。</p>
+
+
+
+<p>飽受戰火侵襲的烏克蘭，正為加入北約與歐盟而努力。相較過去北約或歐盟的遲疑，避免挑釁俄羅斯的善意，並無法帶來和平，反而讓烏克蘭受到了俄羅斯的入侵，不管在摩爾多瓦的峰會或是在挪威奧斯陸所舉辦的北約非正式部長會議，烏克蘭加入北約和歐盟的曙光終於出現。</p>
+
+
+
+<p>如<strong>澤倫斯基</strong>說道：「我們正為烏克蘭準備新的國防決策，其中包括防空、航空工業以及（軍隊的）地面推進。<strong>我們正為即將在（立陶宛）維爾紐斯所舉辦北約領袖峰會，準備實際的政治內容，為我國加入北約的道路上，準備一套安全保證。</strong>我們正在盡一切努力，使歐盟更能做出讓烏克蘭加入歐盟的政治決定。我們正準備以烏克蘭和平方案為基礎的和平峰會。」</p>
+
+
+
+<figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
+<iframe loading="lazy" title="Ми робимо максимум, щоб захистити людей. Звернення Володимира Зеленського 01.06.2023" src="https://www.youtube.com/embed/svQajaawjOo?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div></figure>
+
+
+
+<h3><strong>繼芬蘭之後　<strong>瑞典可望</strong>加入北約&nbsp;</strong></h3>
+
+
+
+<p>除了烏克蘭議題之外，瑞典加入北約也是這次北約非正式部長會議的重點之一。芬蘭於今年 4 月 4 日，正式加入北約，成為第 31 個盟國。如上所述，要加入北約的國家，需要既有盟國的全體同意，與芬蘭一起申請加入北約的瑞典，由於土耳其的反對，尚無法加入。那是因為瑞典和芬蘭都反對土耳其打壓庫德族工人黨（PKK）。</p>
 
 
 
@@ -96,4 +122,4 @@ author: 張東和
 
 
 
-<p>參考資料：<br><a href="https://www.state.gov/secretary-antony-j-blinken-at-a-press-availability-35/" target="_blank" rel="noopener">2023/06/01　DOS　Secretary Antony J. Blinken at a Press Availability</a><br><a href="https://www.nato.int/cps/en/natohq/topics_110496.htm" target="_blank" rel="noopener">2023/04/14　NATO　Topic: Collective defence and Article 5</a><br><a href="https://www.state.gov/secretary-antony-j-blinken-and-nato-secretary-general-jens-stoltenberg-after-their-meeting/" target="_blank" rel="noopener">2023/06/01　DOS　Secretary Antony J. Blinken And NATO Secretary General Jens Stoltenberg After Their Meeting</a></p><p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230602-1/">北約秘書長：所有盟國支持烏克蘭加入北約　俄羅斯無權置喙</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<p>參考資料：<br><a href="https://www.state.gov/secretary-antony-j-blinken-at-a-press-availability-35/" target="_blank" rel="noopener">2023/06/01　DOS　Secretary Antony J. Blinken at a Press Availability</a><br><a href="https://www.nato.int/cps/en/natohq/topics_110496.htm" target="_blank" rel="noopener">2023/04/14　NATO　Topic: Collective defence and Article 5</a><br><a href="https://www.state.gov/secretary-antony-j-blinken-and-nato-secretary-general-jens-stoltenberg-after-their-meeting/" target="_blank" rel="noopener">2023/06/01　DOS　Secretary Antony J. Blinken And NATO Secretary General Jens Stoltenberg After Their Meeting</a><br><a href="https://www.president.gov.ua/en/news/obovyazok-miscevoyi-vladi-zabezpechiti-nayavnist-i-dostupnis-83337" target="_blank" rel="noopener">2023/06/01　The duty of local authorities is to ensure the availability and accessibility of shelters around the clock – address by the President of Ukraine</a></p><p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230602-1/">北約秘書長：所有盟國支持烏克蘭加入北約　俄羅斯無權置喙</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
