--- a/_posts/2023-06-03-INMEDIA-六四34-警方銅鑼灣帶走至少6人-藝術家三木-香港人唔好驚.html
+++ b/_posts/2023-06-03-INMEDIA-六四34-警方銅鑼灣帶走至少6人-藝術家三木-香港人唔好驚.html
@@ -16,7 +16,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/YuKXw5F0a5" title="DSC_9875"><img src="https://live.staticflickr.com/65535/52947730955_eaa4c94d87_b.jpg" width="1024" alt="DSC_9875" /></a></p>
 <p>有藝術家今年一如既往，在六四前夕到銅鑼灣東角道外，以行為藝術悼念六四。至晚上8點，藝術家陳美彤手持一卷黑紙，閉上眼睛默站，並不時轉換位置。在默站近5分鐘後，數十名警員拉起橙帶包圍，警員在陳美彤身上搜出黑手套，隨即將她帶上警車。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/m60EeV5f68" title="DSC_9916"><img src="https://live.staticflickr.com/65535/52947800213_771ce8d1ec_b.jpg" width="1024" alt="DSC_9916" /></a></p>
-<p>另外，現場一對身穿白衣的情侶同被警方帶走，男子掛肩袋內有一束白菊花。他們在被帶走的時候表情平靜，警員搜身後將兩人帶上警車。</p>
+<p>另外，現場一對身穿白衣的男女同被警方帶走，男子掛肩袋內有一束白菊花。他們在被帶走的時候表情平靜，警員搜身後將兩人帶上警車。</p>
 <p>藝術家陳式森（三木）在被警員帶走時，則激動高喊：「不忘六四！香港人唔好驚！香港人唔洗驚佢哋！」他被數十名警員包圍，並帶上警車，警員警告他停止作出煽惑行為。記者問現場警員，兩人是否被正式拘捕，警員未有回應。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/7a6vj84H19" title="DSC_0185"><img src="https://live.staticflickr.com/65535/52947731370_4a65bdd88e_b.jpg" width="1024" alt="DSC_0185" /></a></p>
 <p>另一行為藝術家Dung 則在其T-shirt 前後貼上「銅鑼灣 香港兩大文化產地」的紙，一時行走，一時打開摺櫈坐一會兒，先後坐在崇光百貨、維園門口。現場及後下大雨，他舉起黃雨傘行走，最後離去。</p>
